--- a/Вёрстка/hotel.html
+++ b/Вёрстка/hotel.html
@@ -5,6 +5,8 @@
 <link href="media/css/style.css" rel="stylesheet" type="text/css" />
 <!--[if lte IE 8]><link rel="stylesheet" type="text/css" media="screen" href="media/css/ie.css" /><![endif]--> 
 <script type="text/javascript" src="media/js/jquery.js"></script>
+<script type="text/javascript" src="media/js/jquery-ui-1.8.21.custom.min.js"></script>
+<script type="text/javascript" src="media/js/jquery.jcarousel.min.js"></script>
 <script type="text/javascript" src="media/js/script.js"></script>
 <title>Сибирь-транс</title>
 </head>
@@ -69,12 +71,6 @@
 					<div class="promo_map_des">90 километров к юго-западу от Токио</div>
 					<div class="promo_map_lnk"><img src="media/img/flags/jp.png" alt="" /><a href="#">О Японии</a></div> 
 				</div><!--/promo_map-->
-				
-				<!--<div class="promo_note">
-					<p><img src="media/images/promo_note.jpg" alt="" /></p>
-					<h2>Самая известная винодельческая страна в мире.</h2>
-					<p>Вино здесь стали делать еще со времен нашествия римлян. Кстати, 72 % французов с трудом разбираются в многочисленных винных производителях, ибо только у Бордо их более 9000 разновидностей</p>
-				</div>--><!--/promo_note-->
 			</div><!--/promo_l-->
 			
 			<div class="promo_r col">
