--- a/Вёрстка/tour.html
+++ b/Вёрстка/tour.html
@@ -5,6 +5,8 @@
 <link href="media/css/style.css" rel="stylesheet" type="text/css" />
 <!--[if lte IE 8]><link rel="stylesheet" type="text/css" media="screen" href="media/css/ie.css" /><![endif]--> 
 <script type="text/javascript" src="media/js/jquery.js"></script>
+<script type="text/javascript" src="media/js/jquery-ui-1.8.21.custom.min.js"></script>
+<script type="text/javascript" src="media/js/jquery.jcarousel.min.js"></script>
 <script type="text/javascript" src="media/js/script.js"></script>
 <title>Сибирь-транс</title>
 </head>
@@ -159,11 +161,11 @@
 				<div class="tour_hotel">
 					<h2>Размещение в отеле</h2>
 					<img src="media/images/tour_hotel.jpg" alt="" />
-					<h3 class="tour_hotel_name">Capsule Hotel Fontaine Akasaka</h3>
-					<div class="cl"></div>
 					<div class="tour_hotel_des">
-						<p>Камера хранения багажа, Сейф, Бар, Кондиционер, Доставка прессы, Ресторан, Терраса, Специальные номера для аллергиков, Ресторан (меню), Магазины в отеле</p>
+						<h3 class="tour_hotel_name">Capsule Hotel Fontaine Akasaka</h3>
+						<p>Камера хранения багажа, Сейф, Бар, Кондиционер, Доставка прессы, Ресторан, Терраса, Специальные номера для аллергиков, Ресторан (меню), Магазины вСейф, Бар, Кондиционер, Доставка прессы, Ресторан, Терраса, Специальные номера для аллергиков, Ресторан (меню), Магазины вСейф, Бар, Кондиционер, Доставка прессы, Ресторан, Терраса, Специальные номера для аллергиков, Ресторан (меню), Магазины в отеле</p>
 					</div>
+					<div class="cl"></div>
 					<div class="other_hotels_lnk"><a href="#">Другие отели</a></div>
 				</div><!--/tour_hotel-->
 			</div><!--/tour_info_l-->
@@ -190,25 +192,47 @@
 			</div><!--/tour_info_r-->
 		</div><!--/tour_info-->
 			
-		<!--<div class="tour_other_hotels">
+		<div class="tour_other_hotels_out">
+		<div class="tour_other_hotels">
 			<ul>
 				<li>
-					<img src="media/images/tour_hotel.jpg" alt="" />
-					<h3><a href="#">Capsule Hotel Fontaine Akasaka</a></h3>
-					<div class="">от 2 500 <span class="r">руб.</span></div>
+					<div class="tour_other_hotels_slide">
+						<img src="media/images/tour_hotel.jpg" alt="" />
+						<h3><a href="#">Capontaine Akasaka</a></h3>
+						<div class="tour_other_hotels_price">от <span class="tour_other_hotels_price_val">2 500</span> <span class="r">руб.</span></div>
+					</div>
 				</li>
 				<li>
-					<img src="media/images/tour_hotel.jpg" alt="" />
-					<h3><a href="#">Capsule Hotel Fontaine Akasaka</a></h3>
-					<div class="">от 2 500 <span class="r">руб.</span></div>
+					<div class="tour_other_hotels_slide">
+						<img src="media/images/tour_hotel.jpg" alt="" />
+						<h3><a href="#">Capsule Hotel Fontaine Akale Hotel Fontaine Akasaka</a></h3>
+						<div class="tour_other_hotels_price">от <span class="tour_other_hotels_price_val">2 500</span> <span class="r">руб.</span></div>
+					</div>
 				</li>
 				<li>
-					<img src="media/images/tour_hotel.jpg" alt="" />
-					<h3><a href="#">Capsule Hotel Fontaine Akasaka</a></h3>
-					<div class="">от 2 500 <span class="r">руб.</span></div>
+					<div class="tour_other_hotels_slide">
+						<img src="media/images/tour_hotel.jpg" alt="" />
+						<h3><a href="#">Capsule Hotel Fontaine Akale Hotel Fontaine Akasaka</a></h3>
+						<div class="tour_other_hotels_price">от <span class="tour_other_hotels_price_val">2 500</span> <span class="r">руб.</span></div>
+					</div>
+				</li>
+				<li>
+					<div class="tour_other_hotels_slide">
+						<img src="media/images/tour_hotel.jpg" alt="" />
+						<h3><a href="#">Capsule Hotel Fontaine Akale Hotel Fontaine Akasaka</a></h3>
+						<div class="tour_other_hotels_price">от <span class="tour_other_hotels_price_val">2 500</span> <span class="r">руб.</span></div>
+					</div>
+				</li>
+				<li>
+					<div class="tour_other_hotels_slide">
+						<img src="media/images/tour_hotel.jpg" alt="" />
+						<h3><a href="#">Capsule Hoe Akasaka</a></h3>
+						<div class="tour_other_hotels_price">от <span class="tour_other_hotels_price_val">2 500</span> <span class="r">руб.</span></div>
+					</div>
 				</li>
 			</ul>
-		</div>--><!--/tour_other_hotels-->
+		</div><!--/tour_other_hotels-->
+		</div>
 			
 		<div class="tour_order">
 			<div class="tour_order_price">
