--- a/Вёрстка/tours.html
+++ b/Вёрстка/tours.html
@@ -6,6 +6,7 @@
 <!--[if lte IE 8]><link rel="stylesheet" type="text/css" media="screen" href="media/css/ie.css" /><![endif]--> 
 <script type="text/javascript" src="media/js/jquery.js"></script>
 <script type="text/javascript" src="media/js/jquery-ui-1.8.21.custom.min.js"></script>
+<script type="text/javascript" src="media/js/jquery.jcarousel.min.js"></script>
 <script type="text/javascript" src="media/js/script.js"></script>
 <title>Сибирь-транс</title>
 </head>
@@ -34,9 +35,9 @@
 		</div><!--/contacts-->
 		
 		<div class="h_group">
+			<div class="btn1"><div class="btn1_in"><a href="#">Оформить заявку</a></div></div>
 			<h1>Наши туры</h1>
 			<div class="h_group_lnk"><a href="#">отели</a></div>
-			<div class="btn1"><div class="btn1_in"><a href="#">Оформить заявку</a></div></div>
 		</div>
 		
 		<div class="tours_menu">
