--- a/Вёрстка/country.html
+++ b/Вёрстка/country.html
@@ -5,6 +5,8 @@
 <link href="media/css/style.css" rel="stylesheet" type="text/css" />
 <!--[if lte IE 8]><link rel="stylesheet" type="text/css" media="screen" href="media/css/ie.css" /><![endif]--> 
 <script type="text/javascript" src="media/js/jquery.js"></script>
+<script type="text/javascript" src="media/js/jquery-ui-1.8.21.custom.min.js"></script>
+<script type="text/javascript" src="media/js/jquery.jcarousel.min.js"></script>
 <script type="text/javascript" src="media/js/script.js"></script>
 <title>Сибирь-транс</title>
 </head>
