слайдер картинок туров

--- a/Вёрстка/tour.html
+++ b/Вёрстка/tour.html
@@ -62,6 +62,9 @@
 						<div class="promo_num_name">паскалей</div>
 					</div>
 				</div>
+				
+				<a href="#" class="promo_arr_l"></a>
+				<a href="#" class="promo_arr_r"></a>
 			</div><!--/promo_img-->
 			
 			<div class="promo_l col">
